--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -41,8 +41,205 @@
             <button type="button" class="btn btn-info">List</button>
         </a>
 
+        <div>
+            <div class="mt-4">
+                <h5 ><span class="badge badge-info addReply">Add Reply</span> </h5>
+                <h5 ><span class="badge badge-secondary replyCount"> Reply Count  [[${dto.replyCount}]]</span> </h5>
+            </div>
+            <div class="list-group replyList">
+
+            </div>
+        </div>
+
+        <div class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="replyText" placeholder="댓글 입력...">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="replyer" placeholder="Replyer">
+                            <input type="hidden" name="rno">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger replyRemove">Remove</button>
+                        <button type="button" class="btn btn-warning replyModify">Modify</button>
+                        <button type="button" class="btn btn-primary replySave">Save</button>
+                        <button type="button" class="btn btn-outline-secondary replyClose" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </th:block>
 
 </th:block>
 
+<script>
+    $(document).ready(function() {
+
+        var bno = [[${dto.bno}]];
+
+        // 댓글이 추가될 영역
+        var listGroup = $(".replyList");
+
+        // 날짜 처리를 위한 함수
+        function formatTime(str) {
+            var date = new Date(str);
+
+            return date.getFullYear() + '/' +
+                (date.getMonth() + 1) + '/' +
+                date.getDate() + '/' +
+                date.getHours() + '/' +
+                date.getMinutes();
+        }
+
+        // 특정 게시글의 댓글을 처리하는 함수
+        function loadJSONData() {
+            $.getJSON('/replies/board/'+bno, function (arr){
+                console.log(arr);
+
+                var str = "";
+
+                $(".replyCount").html(" Reply Count " + arr.length);
+
+                $.each(arr, function (idx, reply) {
+                    console.log(reply);
+                    str += ' <div class="card-body" data-rno="'+reply.rno+'"><b>' + reply.rno + '</b>';
+                    str += ' <h5 class="card-title">'+reply.text+'</h5>';
+                    str += ' <h6 class="card-subtitle mb-2 text-muted">'+reply.replyer+'</h6>';
+                    str += ' <p class="card-text">'+ formatTime(reply.regDate)+'</p>';
+                    str += ' </div>';
+                })
+
+                listGroup.html(str);
+            });
+        }
+
+        // 클릭시 댓글 상세내역을 보여주는 함수
+        $(".replyCount").click(function() {
+            loadJSONData();
+        })// end click
+
+        //모달 창
+        var modal = $('.modal');
+
+        $(".addReply").click(function () {
+
+            modal.modal('show');
+
+            //댓글 입력하는 부분 초기화 시키기
+            $('input[name="replyText"]').val('');
+            $('input[name="replyer"]').val('');
+
+
+            $(".modal-footer .btn").hide(); //모달 내의 모든 버튼을 안 보이도록
+            $(".replySave, .replyClose").show(); //필요한 버튼들만 보이도록
+
+        });
+
+        $(".replySave").click(function() {
+            var reply = {
+                bno: bno,
+                text: $('input[name="replyText"]').val(),
+                replyer: $('input[name="replyer"]').val()
+            }
+            console.log(reply);
+
+            // 새로운 댓글은 JSON 형태의 데이터를 처리할 것이므로, 자바스크립트의 객체를 생성
+            // 생성한 후에 해당 객체를 JSON.stringify()를 이용해서 JSON 문자열로 바꾸어 전송
+            // 댓글 추가 작업이 성공한 이후에는 모달창을 화면에서 숨기고, 해당 게시물의 댓글을 가져오는 loadJSONData() 호출해서 화면 갱신
+            $.ajax({
+                url: '/replies/',
+                method: 'post',
+                data:  JSON.stringify(reply),
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json',
+                success: function(data){
+                    console.log(data);
+
+                    var newRno = parseInt(data);
+
+                    alert(newRno +"번 댓글이 등록되었습니다.")
+                    modal.modal('hide');
+                    loadJSONData();
+                }
+            })
+        })
+
+        // 댓글 목록 조회
+        $('.replyList').on("click", ".card-body", function(){
+
+            var rno = $(this).data("rno");
+
+            $("input[name='replyText']").val( $(this).find('.card-title').html());
+            $("input[name='replyer']").val( $(this).find('.card-subtitle').html());
+            $("input[name='rno']").val(rno);
+
+            $(".modal-footer .btn").hide();
+            $(".replyRemove, .replyModify, .replyClose").show();
+
+            modal.modal('show');
+
+        });
+
+        // 댓글 삭제
+        $(".replyRemove").on("click", function(){
+
+            var rno = $("input[name='rno']").val(); //모달 창에 보이는 댓글 번호 hidden처리되어 있음
+
+            $.ajax({
+                url: '/replies/' + rno,
+                method: 'delete',
+
+                success: function(result){
+                    console.log("result: " + result);
+                    if(result ==='success'){
+                        alert("댓글이 삭제되었습니다");
+                        modal.modal('hide');
+                        loadJSONData();
+                    }
+                }
+            })
+        });
+
+        // 댓글 수정
+        $(".replyModify").click(function() {
+
+            var rno = $("input[name='rno']").val();
+
+            var reply = {
+                rno: rno,
+                bno: bno,
+                text: $('input[name="replyText"]').val(),
+                replyer: $('input[name="replyer"]').val()
+            }
+
+            console.log(reply);
+            $.ajax({
+                url: '/replies/' + rno,
+                method: 'put',
+                data:  JSON.stringify(reply),
+                contentType: 'application/json; charset=utf-8',
+                success: function(result){
+
+                    console.log("RESULT: " + result);
+
+                    if(result ==='success'){
+                        alert("댓글이 수정되었습니다");
+                        modal.modal('hide');
+                        loadJSONData();
+                    }
+                }
+            });
+        });
+    });
+</script>
